<resources>
    <string name="app_name">Scavenge It</string>
    <string name="new_game">Create a New Game</string>
    <string name="add_item_button">Add Item</string>
    <string name="done">Done</string>
    <string name="title_activity_add_details">AddDetailsActivity</string>
    <string name="game_prompt">Start Game</string>
    <string name="new_point">Add New Point</string>
    <string name="title_activity_win">WinActivity</string>
    <string name="create_prompt">Create A New Game</string>
    <string name="enter_results">Found Item</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hint">Please enter a hint for this point</string>
    <string name="submit">Submit</string>
    <string name="title_activity_result_screen">ResultScreenActivity</string>
    <string name="lat_long_prompt">Submit the Latitude and Longitude shown below if you
        wish to answer:</string>
    <string name="title_activity_end">EndActivity</string>
    <string name="back_to_map">Back to Map</string>
    <string name="play_again">Play Again?</string>
    <string name="modify_game">Modify Game</string>
    <string name="GPS_warning">Please wait 10-15 seconds to sync with your GPS</string>
    <string name="found_item">Found Item</string>
    <string name="objectives">Objectives</string>
</resources>
