<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EnterResultsActivity"
    tools:showIn="@layout/activity_enter_results">

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/black"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/dim_30"
        android:layout_marginVertical="@dimen/dim_30">

        <Button
            android:id="@+id/back_enter"
            android:layout_gravity="center"
            android:text="@string/back_to_map"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text"
            android:layout_marginTop="@dimen/buttonWidth2"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/buttonHeight"
            android:background="@drawable/button_shape"
            android:shadowColor="@color/shadow"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:onClick="backToMap"
        />

        <TextView
            android:id="@+id/point_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_text"
            android:text="@string/lat_long_prompt"
            android:textSize="18sp"
            android:layout_marginBottom="@dimen/bottom_30"
            android:textColor="@color/white"
            android:layout_gravity="center"/>
        <EditText
            android:id="@+id/enter_latitude"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:background="@color/textbox_color"
            android:gravity="center"
            android:inputType="text"
            android:singleLine="false"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textColorHint="@color/black"
            android:autofillHints="" />
        <EditText
            android:id="@+id/enter_longitude"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/textbox_color"
            android:gravity="center"
            android:inputType="text"
            android:singleLine="false"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textColorHint="@color/black"
            android:autofillHints="" />
        <Button
            android:id="@+id/enter_coordinates"
            android:layout_width="@dimen/buttonWidth2"
            android:layout_height="@dimen/buttonHeight"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:layout_marginTop="@dimen/margin_bottom"
            android:layout_gravity="center"
            android:onClick="submitAnswers"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:shadowColor="@color/shadow"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text"  />
        <LinearLayout
            android:id="@+id/enter_results"
            android:orientation="vertical"
            android:background="@color/black"
            android:layout_gravity="center|top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/dim_30"
            android:layout_marginVertical="@dimen/dim_30"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>